src/ASGMTParser.py
# Generated from ASGMT.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
import torch
import numpy as np
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ASGMTParser ( Parser ):

    grammarFileName = "ASGMT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'+'", "'*'", "'^'", "'cos('", 
                     "')'", "'sin('", "'exp('", "'['", "']'", "'gm('", "','", 
                     "'-'", "'_'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "IDV", "NUM", 
                      "COMM", "WS", "DIGIT" ]

    RULE_assignment = 0
    RULE_add = 1
    RULE_add_term = 2
    RULE_term = 3
    RULE_poly_sum = 4
    RULE_poly_term = 5
    RULE_poly_mono = 6
    RULE_poly_factor = 7
    RULE_trig_sum = 8
    RULE_trig_term = 9
    RULE_trig_mono = 10
    RULE_trig_factor = 11
    RULE_exp_sum = 12
    RULE_exp_term = 13
    RULE_exp_mono = 14
    RULE_exp_factor = 15
    RULE_symvars = 16
    RULE_idd = 17
    RULE_gm = 18
    RULE_list = 19
    RULE_sub = 20
    RULE_par = 21

    ruleNames =  [ "assignment", "add", "add_term", "term", "poly_sum", 
                   "poly_term", "poly_mono", "poly_factor", "trig_sum", 
                   "trig_term", "trig_mono", "trig_factor", "exp_sum", "exp_term", 
                   "exp_mono", "exp_factor", "symvars", "idd", "gm", "list", 
                   "sub", "par" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    IDV=15
    NUM=16
    COMM=17
    WS=18
    DIGIT=19

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symvars(self):
            return self.getTypedRuleContext(ASGMTParser.SymvarsContext,0)


        def add(self):
            return self.getTypedRuleContext(ASGMTParser.AddContext,0)


        def poly_sum(self):
            return self.getTypedRuleContext(ASGMTParser.Poly_sumContext,0)


        def trig_sum(self):
            return self.getTypedRuleContext(ASGMTParser.Trig_sumContext,0)


        def exp_sum(self):
            return self.getTypedRuleContext(ASGMTParser.Exp_sumContext,0)


        def getRuleIndex(self):
            return ASGMTParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = ASGMTParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.symvars()
            self.state = 45
            self.match(ASGMTParser.T__0)
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 46
                self.add()
                pass

            elif la_ == 2:
                self.state = 47
                self.poly_sum()
                pass

            elif la_ == 3:
                self.state = 48
                self.trig_sum()
                pass

            elif la_ == 4:
                self.state = 49
                self.exp_sum()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def add_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASGMTParser.Add_termContext)
            else:
                return self.getTypedRuleContext(ASGMTParser.Add_termContext,i)


        def getRuleIndex(self):
            return ASGMTParser.RULE_add

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdd" ):
                return visitor.visitAdd(self)
            else:
                return visitor.visitChildren(self)




    def add(self):

        localctx = ASGMTParser.AddContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_add)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.add_term()
            self.state = 59
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 54
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==ASGMTParser.T__1:
                        self.state = 53
                        self.match(ASGMTParser.T__1)


                    self.state = 56
                    self.add_term() 
                self.state = 61
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Add_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASGMTParser.TermContext)
            else:
                return self.getTypedRuleContext(ASGMTParser.TermContext,i)


        def getRuleIndex(self):
            return ASGMTParser.RULE_add_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd_term" ):
                listener.enterAdd_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd_term" ):
                listener.exitAdd_term(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdd_term" ):
                return visitor.visitAdd_term(self)
            else:
                return visitor.visitChildren(self)




    def add_term(self):

        localctx = ASGMTParser.Add_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_add_term)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 62
                self.term()
                self.state = 63
                self.match(ASGMTParser.T__2)


            self.state = 67
            self.term()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(ASGMTParser.NUM, 0)

        def par(self):
            return self.getTypedRuleContext(ASGMTParser.ParContext,0)


        def sub(self):
            return self.getTypedRuleContext(ASGMTParser.SubContext,0)


        def symvars(self):
            return self.getTypedRuleContext(ASGMTParser.SymvarsContext,0)


        def gm(self):
            return self.getTypedRuleContext(ASGMTParser.GmContext,0)


        def is_var(self, data):
            if not self.NUM() is None:
                return False
            if not self.par() is None:
                return False
            elif not self.symvars() is None:
                if not self.symvars().IDV() is None:
                    return True
                elif not self.symvars().idd() is None:
                    if self.symvars().idd().is_data(data):
                        return False
                    else:
                        return True
            elif not self.gm() is None:
                return True

        def is_const(self, data):
            return not self.is_var(data)

        def getValue(self, data, params_dict):
            if self.is_const(data):
                if not self.NUM() is None:
                    return float(self.NUM().getText())
                elif not self.symvars() is None:
                    return self.symvars().idd().getValue(data)
                elif not self.par() is None:
                    return self.par().getValue(params_dict)
            else:
                raise("Calling getValue for a variable")

        def getRuleIndex(self):
            return ASGMTParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = ASGMTParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.match(ASGMTParser.NUM)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ASGMTParser.T__12:
                    self.state = 70
                    self.sub()


                self.state = 73
                self.par()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ASGMTParser.T__12:
                    self.state = 74
                    self.sub()


                self.state = 77
                self.symvars()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ASGMTParser.T__12:
                    self.state = 78
                    self.sub()


                self.state = 81
                self.gm()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Poly_sumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def poly_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASGMTParser.Poly_termContext)
            else:
                return self.getTypedRuleContext(ASGMTParser.Poly_termContext,i)


        def getRuleIndex(self):
            return ASGMTParser.RULE_poly_sum

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPoly_sum" ):
                listener.enterPoly_sum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPoly_sum" ):
                listener.exitPoly_sum(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPoly_sum" ):
                return visitor.visitPoly_sum(self)
            else:
                return visitor.visitChildren(self)




    def poly_sum(self):

        localctx = ASGMTParser.Poly_sumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_poly_sum)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.poly_term()
            self.state = 91
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 86
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==ASGMTParser.T__1:
                        self.state = 85
                        self.match(ASGMTParser.T__1)


                    self.state = 88
                    self.poly_term() 
                self.state = 93
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Poly_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def poly_mono(self):
            return self.getTypedRuleContext(ASGMTParser.Poly_monoContext,0)


        def NUM(self):
            return self.getToken(ASGMTParser.NUM, 0)

        def par(self):
            return self.getTypedRuleContext(ASGMTParser.ParContext,0)


        def idd(self):
            return self.getTypedRuleContext(ASGMTParser.IddContext,0)


        def sub(self):
            return self.getTypedRuleContext(ASGMTParser.SubContext,0)


        def getCoeff(self, data, params):
            sign = -1.0 if self.sub() is not None else 1.0
            if self.NUM() is not None:
                return torch.tensor(sign * float(self.NUM().getText()))
            elif self.par() is not None:
                return torch.tensor(sign) * self.par().getValue(params)
            elif self.idd() is not None:
                return torch.tensor(sign) * self.idd().getValue(data)
            else:
                return torch.tensor(sign)

        def getRuleIndex(self):
            return ASGMTParser.RULE_poly_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPoly_term" ):
                listener.enterPoly_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPoly_term" ):
                listener.exitPoly_term(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPoly_term" ):
                return visitor.visitPoly_term(self)
            else:
                return visitor.visitChildren(self)




    def poly_term(self):

        localctx = ASGMTParser.Poly_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_poly_term)
        self._la = 0 # Token type
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ASGMTParser.T__12:
                    self.state = 94
                    self.sub()


                self.state = 100
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ASGMTParser.NUM]:
                    self.state = 97
                    self.match(ASGMTParser.NUM)
                    pass
                elif token in [ASGMTParser.T__13]:
                    self.state = 98
                    self.par()
                    pass
                elif token in [ASGMTParser.IDV]:
                    self.state = 99
                    self.idd()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 102
                self.match(ASGMTParser.T__2)
                self.state = 103
                self.poly_mono()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ASGMTParser.T__12:
                    self.state = 104
                    self.sub()


                self.state = 107
                self.poly_mono()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ASGMTParser.T__12:
                    self.state = 108
                    self.sub()


                self.state = 114
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ASGMTParser.NUM]:
                    self.state = 111
                    self.match(ASGMTParser.NUM)
                    pass
                elif token in [ASGMTParser.T__13]:
                    self.state = 112
                    self.par()
                    pass
                elif token in [ASGMTParser.IDV]:
                    self.state = 113
                    self.idd()
                    pass
                else:
                    raise NoViableAltException(self)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Poly_monoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def poly_factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASGMTParser.Poly_factorContext)
            else:
                return self.getTypedRuleContext(ASGMTParser.Poly_factorContext,i)


        def getRuleIndex(self):
            return ASGMTParser.RULE_poly_mono

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPoly_mono" ):
                listener.enterPoly_mono(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPoly_mono" ):
                listener.exitPoly_mono(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPoly_mono" ):
                return visitor.visitPoly_mono(self)
            else:
                return visitor.visitChildren(self)




    def poly_mono(self):

        localctx = ASGMTParser.Poly_monoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_poly_mono)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.poly_factor()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ASGMTParser.T__2:
                self.state = 119
                self.match(ASGMTParser.T__2)
                self.state = 120
                self.poly_factor()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Poly_factorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symvars(self):
            return self.getTypedRuleContext(ASGMTParser.SymvarsContext,0)


        def gm(self):
            return self.getTypedRuleContext(ASGMTParser.GmContext,0)


        def NUM(self):
            return self.getToken(ASGMTParser.NUM, 0)

        def is_gm(self):
            return self.gm() is not None

        def is_var(self, data):
            if self.symvars() is not None:
                if self.symvars().idd() is not None:
                    return not self.symvars().idd().is_data(data)
                return True
            return self.is_gm()

        def getVar(self, data):
            if self.symvars() is not None:
                return self.symvars().getVar(data)
            return None

        def getExp(self):
            if self.NUM() is not None:
                return int(float(self.NUM().getText()))
            return 1

        def getRuleIndex(self):
            return ASGMTParser.RULE_poly_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPoly_factor" ):
                listener.enterPoly_factor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPoly_factor" ):
                listener.exitPoly_factor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPoly_factor" ):
                return visitor.visitPoly_factor(self)
            else:
                return visitor.visitChildren(self)




    def poly_factor(self):

        localctx = ASGMTParser.Poly_factorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_poly_factor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ASGMTParser.IDV]:
                self.state = 126
                self.symvars()
                pass
            elif token in [ASGMTParser.T__10]:
                self.state = 127
                self.gm()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ASGMTParser.T__3:
                self.state = 130
                self.match(ASGMTParser.T__3)
                self.state = 131
                self.match(ASGMTParser.NUM)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Trig_sumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def trig_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASGMTParser.Trig_termContext)
            else:
                return self.getTypedRuleContext(ASGMTParser.Trig_termContext,i)


        def getRuleIndex(self):
            return ASGMTParser.RULE_trig_sum

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrig_sum" ):
                listener.enterTrig_sum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrig_sum" ):
                listener.exitTrig_sum(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrig_sum" ):
                return visitor.visitTrig_sum(self)
            else:
                return visitor.visitChildren(self)




    def trig_sum(self):

        localctx = ASGMTParser.Trig_sumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_trig_sum)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.trig_term()
            self.state = 141
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,20,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 136
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==ASGMTParser.T__1:
                        self.state = 135
                        self.match(ASGMTParser.T__1)


                    self.state = 138
                    self.trig_term() 
                self.state = 143
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,20,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Trig_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def trig_mono(self):
            return self.getTypedRuleContext(ASGMTParser.Trig_monoContext,0)


        def NUM(self):
            return self.getToken(ASGMTParser.NUM, 0)

        def par(self):
            return self.getTypedRuleContext(ASGMTParser.ParContext,0)


        def idd(self):
            return self.getTypedRuleContext(ASGMTParser.IddContext,0)


        def sub(self):
            return self.getTypedRuleContext(ASGMTParser.SubContext,0)


        def getCoeff(self, data, params):
            sign = -1.0 if self.sub() is not None else 1.0
            if self.NUM() is not None:
                return torch.tensor(sign * float(self.NUM().getText()))
            elif self.par() is not None:
                return torch.tensor(sign) * self.par().getValue(params)
            elif self.idd() is not None:
                return torch.tensor(sign) * self.idd().getValue(data)
            else:
                return torch.tensor(sign)

        def getRuleIndex(self):
            return ASGMTParser.RULE_trig_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrig_term" ):
                listener.enterTrig_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrig_term" ):
                listener.exitTrig_term(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrig_term" ):
                return visitor.visitTrig_term(self)
            else:
                return visitor.visitChildren(self)




    def trig_term(self):

        localctx = ASGMTParser.Trig_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_trig_term)
        self._la = 0 # Token type
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,26,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ASGMTParser.T__12:
                    self.state = 144
                    self.sub()


                self.state = 150
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ASGMTParser.NUM]:
                    self.state = 147
                    self.match(ASGMTParser.NUM)
                    pass
                elif token in [ASGMTParser.T__13]:
                    self.state = 148
                    self.par()
                    pass
                elif token in [ASGMTParser.IDV]:
                    self.state = 149
                    self.idd()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 152
                self.match(ASGMTParser.T__2)
                self.state = 153
                self.trig_mono()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ASGMTParser.T__12:
                    self.state = 154
                    self.sub()


                self.state = 157
                self.trig_mono()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ASGMTParser.T__12:
                    self.state = 158
                    self.sub()


                self.state = 164
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ASGMTParser.NUM]:
                    self.state = 161
                    self.match(ASGMTParser.NUM)
                    pass
                elif token in [ASGMTParser.T__13]:
                    self.state = 162
                    self.par()
                    pass
                elif token in [ASGMTParser.IDV]:
                    self.state = 163
                    self.idd()
                    pass
                else:
                    raise NoViableAltException(self)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Trig_monoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def trig_factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASGMTParser.Trig_factorContext)
            else:
                return self.getTypedRuleContext(ASGMTParser.Trig_factorContext,i)


        def getRuleIndex(self):
            return ASGMTParser.RULE_trig_mono

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrig_mono" ):
                listener.enterTrig_mono(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrig_mono" ):
                listener.exitTrig_mono(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrig_mono" ):
                return visitor.visitTrig_mono(self)
            else:
                return visitor.visitChildren(self)




    def trig_mono(self):

        localctx = ASGMTParser.Trig_monoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_trig_mono)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.trig_factor()
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ASGMTParser.T__2:
                self.state = 169
                self.match(ASGMTParser.T__2)
                self.state = 170
                self.trig_factor()
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Trig_factorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symvars(self):
            return self.getTypedRuleContext(ASGMTParser.SymvarsContext,0)


        def gm(self):
            return self.getTypedRuleContext(ASGMTParser.GmContext,0)


        def NUM(self):
            return self.getToken(ASGMTParser.NUM, 0)

        def is_var_factor(self):
            return not self.getText().startswith('cos(') and not self.getText().startswith('sin(')

        def is_cos(self):
            return self.getText().startswith('cos(')

        def is_sin(self):
            return self.getText().startswith('sin(')

        def is_gm(self):
            return self.gm() is not None

        def is_var(self, data):
            if self.symvars() is not None:
                if self.symvars().idd() is not None:
                    return not self.symvars().idd().is_data(data)
                return True
            return self.is_gm()

        def getVar(self, data):
            if self.symvars() is not None:
                return self.symvars().getVar(data)
            return None

        def getExp(self):
            if self.NUM() is not None:
                return int(float(self.NUM().getText()))
            return 1

        def getRuleIndex(self):
            return ASGMTParser.RULE_trig_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrig_factor" ):
                listener.enterTrig_factor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrig_factor" ):
                listener.exitTrig_factor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrig_factor" ):
                return visitor.visitTrig_factor(self)
            else:
                return visitor.visitChildren(self)




    def trig_factor(self):

        localctx = ASGMTParser.Trig_factorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_trig_factor)
        self._la = 0 # Token type
        try:
            self.state = 204
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ASGMTParser.T__10, ASGMTParser.IDV]:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ASGMTParser.IDV]:
                    self.state = 176
                    self.symvars()
                    pass
                elif token in [ASGMTParser.T__10]:
                    self.state = 177
                    self.gm()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 182
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ASGMTParser.T__3:
                    self.state = 180
                    self.match(ASGMTParser.T__3)
                    self.state = 181
                    self.match(ASGMTParser.NUM)

